# interactive_ZKP

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  mypy.ini  pyproject.toml  z_notes.md
ci/client/: Dockerfile  docker-entrypoint.sh
ci/server/: Dockerfile  docker-entrypoint.sh
config/: local.yaml
proto/: zkp_auth.proto  zkp_auth_pb2.py  zkp_auth_pb2.pyi  zkp_auth_pb2_grpc.py
scripts/: start_docker_compose_services.sh
src/: client.py  lib.py  server.py  settings.py
tests/: test_client.py  test_integration.py  test_lib.py  test_server.py  test_settings.py  test_zkp.py
